GRP-7009: Extract Grouper architecture and configuration reference to dedicated files; trim CLAUDE.md